# PhysicsSim

./: .gitmodules  CMakeLists.txt  LICENSE
include/: numerical.hpp  particle.hpp  window.hpp
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp  numerical.cpp  particle.cpp  window.cpp
